# gigalib

./: .env.example  .gitattributes  .gitignore  README.md  enrich.py  platforms.yaml  pyproject.toml
gigalib/: __init__.py  app.py  assistant.py  enricher.py  models.py  platforms.py  routes.py  social.py
gigalib/static/: manifest.json  sw.js
gigalib/templates/: base.html  conversations.html  index.html  social.html
gigalib_social_service/: __init__.py  app.py  models.py
scripts/: enrich.py  install_service.py  install_social.ps1  run.py  serve.py  serve_social.py  setup.ps1
